Crash when pasting a material in 2.79 file #60261

Closed
opened 2019-01-07 10:45:36 +01:00 by Dario Abatianni · 6 comments

System Information
Operating system: openSUSE Tumbleweed 64bit
Graphics card: Radeon HD 570 / NVidia Quadro FX880m / NVidia GTX970

Blender Version
Broken: 2.80, 430cf7e15e, blender2.7, 2019-01-07, as found on the splash screen)
Worked: 2.79

Short description of error
Blender crashes when pasting a material in a 2.79 blend file with Blender Internal materials

Exact steps for others to reproduce the error

  • Open Blender 2.80beta
  • Load provided .blend file{F6208406}
  • Open Materials tab
  • Select Material "A"
  • Select "Copy Material" from the dropdown
  • Select Material "B"
  • Select "Paste Material" from the dropdown
  • Crash
**System Information** Operating system: openSUSE Tumbleweed 64bit Graphics card: Radeon HD 570 / NVidia Quadro FX880m / NVidia GTX970 **Blender Version** Broken: 2.80, 430cf7e15eef, blender2.7, 2019-01-07, as found on the splash screen) Worked: 2.79 **Short description of error** Blender crashes when pasting a material in a 2.79 blend file with Blender Internal materials **Exact steps for others to reproduce the error** - Open Blender 2.80beta - Load provided .blend file{[F6208406](https://archive.blender.org/developer/F6208406/crash_paste_materials.blend)} - Open Materials tab - Select Material "A" - Select "Copy Material" from the dropdown - Select Material "B" - Select "Paste Material" from the dropdown - Crash

Added subscriber: @Eisfuchs

Added subscriber: @Eisfuchs
Member

Added subscribers: @mont29, @ideasman42, @lichtwerk

Added subscribers: @mont29, @ideasman42, @lichtwerk
Member

Confirmed, this is only the case if the materials dont have Use Nodes enabled though

BLI_assert(!"Request to allocate unknown data type")
the matcopybuf.nodetree is garbled memory
there is also related comments already:

  • \brief copy/paste buffer, if we had a proper py api that would be better
  • \note matcopybuf.nodetree does NOT use ID's
  • \todo matcopybuf.nodetree's node->id's are NOT validated, this will crash!
1   raise                                               0x7ffff466a53f 
2   abort                                               0x7ffff4654895 
3   BKE_libblock_alloc_notest library.c            1095 0x2ab3c51      
4   BKE_libblock_alloc        library.c            1109 0x2ab3cd0      
5   BKE_libblock_copy_ex      library.c            1329 0x2ab4679      
6   BKE_id_copy_ex            library.c            593  0x2aaf007      
7   ntreeCopyTree_ex          node.c               1387 0x2b2c3e5      
8   paste_matcopybuf          material.c           1426 0x2aded6b      
9   paste_material_exec       render_shading.c     1782 0x222a2f8   

Not sure, maybe we should just check material's Use Nodes and act accordingly?
@mont29, @ideasman42: opinions?

Confirmed, this is only the case if the materials dont have `Use Nodes` enabled though `BLI_assert(!"Request to allocate unknown data type")` the `matcopybuf.nodetree` is garbled memory there is also related comments already: > * \brief copy/paste buffer, if we had a proper py api that would be better > * \note matcopybuf.nodetree does _NOT_ use ID's > * \todo matcopybuf.nodetree's node->id's are NOT validated, this will crash! ``` 1 raise 0x7ffff466a53f 2 abort 0x7ffff4654895 3 BKE_libblock_alloc_notest library.c 1095 0x2ab3c51 4 BKE_libblock_alloc library.c 1109 0x2ab3cd0 5 BKE_libblock_copy_ex library.c 1329 0x2ab4679 6 BKE_id_copy_ex library.c 593 0x2aaf007 7 ntreeCopyTree_ex node.c 1387 0x2b2c3e5 8 paste_matcopybuf material.c 1426 0x2aded6b 9 paste_material_exec render_shading.c 1782 0x222a2f8 ``` Not sure, maybe we should just check material's `Use Nodes` and act accordingly? @mont29, @ideasman42: opinions?
Member

Think D4178 should fix this

Think [D4178](https://archive.blender.org/developer/D4178) should fix this
Philipp Oeser self-assigned this 2019-01-07 12:28:10 +01:00

This issue was referenced by e57ee5934a

This issue was referenced by e57ee5934a30e87410b7544ba8d18054881b2c00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60261
No description provided.