Fix T60261: Crash pasting a material without a nodetree